Fixed some issues with safari not supporting flex with gap

--- a/components/ProjectCard/ProjectCard.module.css
+++ b/components/ProjectCard/ProjectCard.module.css
@@ -5,6 +5,7 @@
   color: var(--light-text);
   padding: 40px;
   border-radius: 25px;
+  margin-bottom: 40px;
 }
 
 .projectCard h2 {
